--- a/.azure-pipelines/templates/windows-functional-test.yml
+++ b/.azure-pipelines/templates/windows-functional-test.yml
@@ -14,7 +14,7 @@ steps:
   - script: git config --global credential.interactive never
     displayName: Disable interactive auth
 
-  - script: $(Build.BinariesDirectory)/FunctionalTests_$(platformFriendlyName)_$(configuration)/src/Scripts/RunFunctionalTests.bat $(configuration) --test-scalar-on-path
+  - script: $(Build.BinariesDirectory)/FunctionalTests_$(platformFriendlyName)_$(configuration)/src/Scripts/RunFunctionalTests.bat $(configuration) --test-scalar-on-path "--trace2-output=$(Build.ArtifactStagingDirectory)\trace2-event-windows.txt"
     displayName: Run functional tests
 
   - task: PublishTestResults@2
@@ -26,3 +26,9 @@ steps:
       testRunTitle: Windows $(configuration) Functional Tests
       publishRunAttachments: true
     condition: succeededOrFailed()
+
+  - task: PublishBuildArtifacts@1
+    displayName: Publish Git trace2 log
+    inputs:
+      pathtoPublish: '$(Build.ArtifactStagingDirectory)'
+      artifactName: trace2-event-windows.txt
