--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -43,17 +43,22 @@ jobs:
 
     - name: Setup platform (Linux)
       if: runner.os == 'Linux'
-      run: echo "::set-env name=BUILD_PLATFORM::${{ runner.os }}"
+      run: |
+        echo "::set-env name=BUILD_PLATFORM::${{ runner.os }}"
+        echo "::set-env name=TRACE2_BASENAME::Trace2.${{ runner.run_id }}.${{ runner.run_number }}.${{ matrix.os }}.${{ matrix.watchman }}"
 
     - name: Setup platform (Mac)
       if: runner.os == 'macOS'
-      run: echo '::set-env name=BUILD_PLATFORM::Mac'
+      run: |
+        echo '::set-env name=BUILD_PLATFORM::Mac'
+        echo "::set-env name=TRACE2_BASENAME::Trace2.${{ runner.run_id }}.${{ runner.run_number }}.${{ matrix.os }}.${{ matrix.watchman }}"
 
     - name: Setup platform (Windows)
       if: runner.os == 'Windows'
       run: |
         echo "::set-env name=BUILD_PLATFORM::${{ runner.os }}"
         echo '::set-env name=BUILD_FILE_EXT::.exe'
+        echo "::set-env name=TRACE2_BASENAME::Trace2.${{ runner.run_id }}.${{ runner.run_number }}.${{ matrix.os }}.${{ matrix.watchman }}"
 
     - name: Setup Git installer
       shell: bash
@@ -127,9 +132,38 @@ jobs:
         & watchman --version
         echo "::add-path::C:\Program Files\Watchman"
 
-    - name: Functional test
+    - id: functional_test
+      name: Functional test
       shell: bash
       run: |
+        GIT_TRACE2_EVENT="$PWD/$TRACE2_BASENAME/Event"
+        GIT_TRACE2_PERF="$PWD/$TRACE2_BASENAME/Perf"
+        GIT_TRACE2_PERF_BRIEF=true
+        export GIT_TRACE2_EVENT
+        export GIT_TRACE2_PERF
+        export GIT_TRACE2_PERF_BRIEF
+        mkdir -p "$TRACE2_BASENAME"
+        mkdir -p "$TRACE2_BASENAME/Event"
+        mkdir -p "$TRACE2_BASENAME/Perf"
+        git version --build-options
         cd ../out
         PATH="$PWD/Scalar/$BUILD_FRAGMENT:$PWD/Scalar.Service/$BUILD_FRAGMENT:$PATH"
         Scalar.FunctionalTests/$BUILD_FRAGMENT/Scalar.FunctionalTests$BUILD_FILE_EXT --test-scalar-on-path --full-suite
+
+    - id: trace2_zip_unix
+      if: runner.os != 'Windows' && ( success() || failure() ) && ( steps.functional_test.conclusion == 'success' || steps.functional_test.conclusion == 'failure' )
+      name: Zip Trace2 Logs (Unix)
+      shell: bash
+      run: zip -q -r $TRACE2_BASENAME.zip $TRACE2_BASENAME/
+
+    - id: trace2_zip_windows
+      if: runner.os == 'Windows' && ( success() || failure() ) && ( steps.functional_test.conclusion == 'success' || steps.functional_test.conclusion == 'failure' )
+      name: Zip Trace2 Logs (Windows)
+      run: Compress-Archive -DestinationPath ${{ env.TRACE2_BASENAME }}.zip -Path ${{ env.TRACE2_BASENAME }}
+
+    - name: Archive Trace2 Logs
+      if: ( success() || failure() ) && ( steps.trace2_zip_unix.conclusion == 'success' || steps.trace2_zip_windows == 'success' )
+      uses: actions/upload-artifact@v2
+      with:
+        name: ${{ env.TRACE2_BASENAME }}.zip
+        path: ${{ env.TRACE2_BASENAME }}.zip
