--- a/.github/workflows/build-installers.yml
+++ b/.github/workflows/build-installers.yml
@@ -2,9 +2,9 @@ name: Build Installers
 
 on:
   push:
-    branches: [ main, release/* ]
+    branches: [ main, releases/* ]
   pull_request:
-    branches: [ main, release/* ]
+    branches: [ main, releases/* ]
 
 jobs:
   linux:
@@ -23,7 +23,15 @@ jobs:
       run: dotnet restore --force
 
     - name: Build Linux packages
-      run: dotnet publish -c Release 'Scalar.Packaging.Linux/Scalar.Packaging.Linux.csproj'
+      run: |
+        BRANCH=$(git branch --show-current)
+        if [ "${BRANCH:0:9}" = "releases/" ]; then
+          SCALARVERSION="${BRANCH:9}".0
+        else
+          SCALARVERSION=0.3.132.0
+        fi
+        echo $SCALARVERSION
+        dotnet publish -c Release -p:ScalarVersion=$SCALARVERSION 'Scalar.Packaging.Linux/Scalar.Packaging.Linux.csproj'
 
       # Because the actions/upload-artifact action does not allow you to specify
       # relative file paths we must first use a shell script to copy the
