ci: avoid using the deprecated `add-path` construct
Just like `set-env`, we need to avoid using `add-path`.

Signed-off-by: Johannes Schindelin <johannes.schindelin@gmx.de>

--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -125,7 +125,7 @@ jobs:
         Copy-Item -Path 'watchman\watchman-*-windows\bin\*' -Destination 'C:\Program Files\Watchman'
         $ENV:PATH="$ENV:PATH;C:\Program Files\Watchman"
         & watchman --version
-        echo "::add-path::C:\Program Files\Watchman"
+        echo "PATH=$ENV:PATH" >>$env:GITHUB_ENV
 
     - name: Functional test
       shell: bash
