--- a/Scalar.Signing/Scalar.SignFiles.Windows.csproj
+++ b/Scalar.Signing/Scalar.SignFiles.Windows.csproj
@@ -11,13 +11,7 @@
     <FilesToSign Include="
       $(OutDir)\scalar.dll;
       $(OutDir)\scalar.exe;
-      $(OutDir)\scalar.common.dll;
-      $(OutDir)\scalar.service.dll;
-      $(OutDir)\scalar.service.exe;
-      $(OutDir)\scalar.service.ui.dll;
-      $(OutDir)\scalar.service.ui.exe;
-      $(OutDir)\scalar.upgrader.dll;
-      $(OutDir)\scalar.upgrader.exe;" />
+      $(OutDir)\scalar.common.dll;" />
   </ItemGroup>
 
 </Project>
