CI: use more recent version of Watchman
Signed-off-by: Derrick Stolee <dstolee@microsoft.com>

--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -115,7 +115,7 @@ jobs:
 
     - name: Install Watchman (Mac)
       if: runner.os == 'macOS' && matrix.watchman
-      run: brew install watchman
+      run: brew update && brew install watchman
 
     - name: Install Watchman (Windows)
       if: runner.os == 'Windows' && matrix.watchman
